<resources>
    <string name="app_name">ASSIGNMENT4</string>
    <string name="btn_register_here">Register Here</string>
    <string name="txtview_create_an_account">Create an Account?</string>
    <string name="btn_login">Login</string>
    <string name="edittext_enter_your_password">Enter your password</string>
    <string name="txtview_password">password</string>
    <string name="edittext_enter_your_username">Enter your Username</string>
    <string name="txtview_username">username</string>
    <string name="label_movie_app_login">Movie App Login</string>
    <string name="txtview_movie_app_register">Movie App Register</string>
    <string name="text_first_name">First Name</string>
    <string name="edittext_enter_first_name">Enter First Name</string>
    <string name="text_last_name">Last Name</string>
    <string name="edittext_enter_last_name">Enter Last Name</string>
    <string name="text_email_id">Email Id</string>
    <string name="edittext_enter_email_id">Enter Email id</string>
    <string name="text_username">Username</string>
    <string name="edittext_enter_username">Enter username</string>
    <string name="text_password">Password</string>
    <string name="edittext_enter_password">Enter Password</string>
    <string name="text_confirm_password">Confirm Password</string>
    <string name="edittext_enter_confirm_password">Enter confirm Password</string>
    <string name="btn_register">Register</string>
    <string name="text_already_have_an_account">Already Have an Account?</string>
    <string name="login_btn">Login</string>
    <string name="add_movie">+</string>
    <string name="favourite_movies">Favourite Movies</string>
    <string name="cancel">X</string>
    <string name="movie_id">Movie Id</string>
    <string name="title">Title</string>
    <string name="studio">Studio</string>
    <string name="genres">Genres</string>
    <string name="directors">Directors</string>
    <string name="writers">Writers</string>
    <string name="actors">Actors</string>
    <string name="year">Year</string>
    <string name="length">Length</string>
    <string name="short_description">Short Description</string>
    <string name="mpa_rating">Mpa Rating</string>
    <string name="critics_rating">Critics rating</string>
    <string name="btn_cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="edit_movie">Edit Movie</string>
    <string name="delete">Delete</string>
    <string name="todo">TODO</string>
    <string name="email_id">Email Id</string>
    <string name="enter_your_email_id">Enter Your Email Id</string>
</resources>