<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:id="@+id/loginLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/label_movie_app_login"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_marginStart="15dp"
        android:id="@+id/usernameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginLabel"
        android:layout_marginTop="50dp"
        android:text="@string/txtview_username"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginLabel" />

    <EditText
        android:layout_marginEnd="15dp"
        android:autofillHints="username"
        android:id="@+id/usernameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameLabel"
        android:layout_marginTop="10dp"
        android:hint="@string/edittext_enter_your_username"
        android:inputType="text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/usernameLabel"
        app:layout_constraintTop_toBottomOf="@id/usernameLabel" />

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameEditText"
        android:layout_marginTop="20dp"
        android:text="@string/txtview_password"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@id/usernameEditText"
        app:layout_constraintTop_toBottomOf="@id/usernameEditText" />

    <EditText
        android:autofillHints="password"
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordLabel"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/edittext_enter_your_password"
        android:inputType="textPassword"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/passwordLabel"
        app:layout_constraintTop_toBottomOf="@id/passwordLabel" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordEditText"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/btn_login"
        android:background="@drawable/bg_btn"
        app:layout_constraintEnd_toEndOf="@id/passwordEditText"
        app:layout_constraintStart_toStartOf="@+id/passwordEditText"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText" />

    <TextView
        android:id="@+id/noAccountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtview_create_an_account"
        android:textSize="17sp"
        android:textStyle="italic|bold"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="@id/registerButton"
        app:layout_constraintEnd_toStartOf="@id/registerButton"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/registerButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingHorizontal="20dp"
        android:background="@drawable/bg_btn_register"
        android:text="@string/btn_register_here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/noAccountLabel"
        app:layout_constraintTop_toBottomOf="@id/loginButton" />

</androidx.constraintlayout.widget.ConstraintLayout>